2008-01-25  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
	* hiki.cgi, misc/plugin/attach/attach.cgi: $defout -> $stdout.

2008-01-07  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
	* plugin/01sp.rb: improve previous incompatible change.

2008-01-06  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
	* hiki/config.rb, hiki/hiki_formatter.rb,
	misc/webrick/hikilet.rb, plugin/01sp.rb, hiki/pluginutil.rb,
	style/default/html_formatter.rb: partially support ruby 1.9.0.

2007-10-29  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
	* hiki/command.rb: revert partial patched
	toc_lv. (see [Hiki-dev:01106], [Hiki-dev:01164])

2007-09-26  U.Nakamura  <usa@garbagecollect.jp>
	* hiki/command.rb: raise SessionError instead of PermissionError
	in case of session errors.

2007-09-25  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/db/flatfile.rb, hiki.cgi, hiki/xmlrpc.rb,
	misc/webrick/hikilet.rb: use HikiDB_dbtype as the name of the
	class instead of HikiDB.

	* hiki.cgi: remove "$SAFE = 1" for FastCGI.

2007-09-24  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/plugin/history.rb: hide "Changes" heading in non-cvs
	repository case.

2007-07-17  Kouhei Yanagita <yanagi@shakenbu.org>
	* plugin/00default.rb (create_menu): set rel="nofollow" in menu links to
	edit/diff pages (patch by Kazuhiro NISHIYAMA).

2007-06-24  Kouhei Yanagita <yanagi@shakenbu.org>
	* Hiki 0.8.7 released!

	* hiki/session.rb (initialize): fix a arbitrary file delete vulnerability.

2007-06-24  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/plugin/attach.rb (attach_download): add a Content-Length
	header.

2007-06-23  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/command.rb (cmd_admin): escape config key in admin mode.

2007-06-22  Kouhei Yanagita <yanagi@shakenbu.org>
	* hiki/session.rb (create_new_id): use Time#usec to make a session id
	more hard-to-crack.

2007-05-23  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
	* hiki/page.rb: add Vary to response headers.

2007-04-08    <wiki@boron.rubyist.net>
	* misc/plugin/attach.rb: get image size of other pages correctly.
